Updated Code at Manifest and Doctor Activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,4 +71,5 @@
     <string name="no_events_to_display">No Events to Display</string>
     <string name="welcome_message">Welcome</string>
     <string name="enter_pin">Enter PIN</string>
+    <string name="doctor_degree">Doctor Degree</string>
 </resources>
